--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -36,3 +36,14 @@ li {
   display: flex;
   justify-content: center;
 }
+
+.header-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: inherit;
+
+  .ant-menu-item-group-title {
+    padding: 0;
+  }
+}
