--- a/src/styles/room.module.scss
+++ b/src/styles/room.module.scss
@@ -47,3 +47,38 @@
         }
     }
 }
+
+.roomSection {
+    margin-top: 3rem;
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items:flex-start;
+
+    .participantsStart {
+        width: 45%;
+        margin-right: 4rem;
+    }
+
+    .botsStart {
+        width: 45%;
+    }
+
+    .chat {
+        width: 100%;
+        height: 400px !important;
+        overflow-y: scroll;
+    }
+
+    .sendMessage {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        input {
+            margin-bottom: 2rem;
+        }
+    }
+}
