--- a/src/styles/story.module.scss
+++ b/src/styles/story.module.scss
@@ -11,6 +11,12 @@
     .flipButton {
         position: absolute;
         top: 0;
-        left: 100px;
+        left: 100px ;
+    }
+
+    .saveButton {
+        position: absolute;
+        top: 10%;
+        left: 50%;
     }
 }
