--- a/src/styles/story.module.scss
+++ b/src/styles/story.module.scss
@@ -2,21 +2,32 @@
     position: relative;
     .resizePlus {
         position: absolute;
-        top: 0; left: 0;
+        top: 50px; left: 50px;
     }
     .resizeMinus {
         position: absolute;
-        top: 0; left: 50px;
+        top: 50px; left: 100px;
     }
     .flipButton {
         position: absolute;
-        top: 0;
-        left: 100px ;
+        top: 50px;
+        left: 150px ;
     }
 
     .saveButton {
         position: absolute;
         top: 10%;
         left: 50%;
+    }
+
+    .nextButton {
+        position: absolute;
+        top: 50px;
+        left: 200px ;
+    }
+    .prevButton {
+        position: absolute;
+        top: 50px;
+        left: 300px ;
     }
 }
